--- a/consumer/package.json
+++ b/consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "streaming-information-procession",
+  "name": "consumer",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,10 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/microservices": "^8.4.5",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/serve-static": "^2.2.2",
-    "kafkajs": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
