--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "concurrently \"npm run start:consumer\" \"npm run start:producer\"",
     "start:consumer": "cd packages/consumer && npm run start",
     "start:producer": "cd packages/producer && npm run start",
+    "start:many-threads": "cd packages/many-threads && npm run start",
     "start:dev": "npm run start:consumer:dev && npm run start:producer:dev",
     "start:consumer:dev": "cd packages/consumer && npm run start:dev",
     "start:producer:dev": "cd packages/producer && npm run start:dev"
